flapivor/tests/m3/hopix/typechecker/good/18-polymorphic-recursive-function.hopix
def false_rec : forall a, b. a -> b (x) = false_rec<a, b> (x)

val main : String = false_rec<Int, String>(33)