flapivor/tests/m3/hopix/typechecker/bad/48-constructor-04.hopix
type T<a> = A (a)

val main : T<Int> = A<> (0)